# Server_SIT_Mastery

./: .gitattributes  .gitignore  00-索引.md  README.md  ssh_info.md  temp_100152_hotplug.docx  工作记录_20260506.md  🏠 Home.md
.obsidian/: app.json  community-plugins.json  core-plugins.json
02-知识库/: Blackwell SM 内部结构架构图说明.txt  ChatGPT-AI服务器硬件测试平台.md  Day3.md  Day4.md  Day5_存储系统.md  Day5_存储系统v2.md  Day6_NVMe架构深挖.md  Day7.md  Day9.md  PCIe链路状态测试.txt  ai_sit_platform_codex_spec.md  deep-research-report (1).md  deep-research-report.md  linux_cmd_03_性能监控.md  linux_cmd_04_日志排查.md  linux_cmd_05_网络测试.md  server_hardware_integration_test_manual_2026-03.md  server_hardware_integration_testing_manual_2026_03.md  思路.txt  新建 文本文档.txt  服务器硬件整合测试工具与使用方法_行业规范扩展手册.md  服务器硬件整合测试工具手册_完整版.md
03-项目文档/: 04-K620BS背板导入项目总结.md  summary.md  天垓150S_GPU性能稳定性测试用例_7天.md  金丝雀项目-Bug整理报告.md
05-练习/: 扩容root.sh
SIT-Guide/: ARM-SIT-Guide-需求书.md  index.html
docs/bmc-cases/bmc-test-framework/: README.md  pyproject.toml
docs/bmc-cases/bmc-test-framework/config/: __init__.py  settings.yaml
docs/bmc-cases/bmc-test-framework/config/bmc_models/: model_n810t_a2.yaml  template.yaml
docs/bmc-cases/bmc-test-framework/core/: assertions.py  base_page.py  config_loader.py  driver_factory.py
docs/bmc-cases/bmc-test-framework/pages/: __init__.py  change_user_page.py  firmware_page.py  help_dialog_page.py  homepage_page.py  login_page.py  sidebar_page.py  user_management_page.py
docs/bmc-cases/bmc-test-framework/tests/: __init__.py  conftest.py  test_help_dialog.py  test_login.py  test_user_management.py
(+1071 files in other folders)
